<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2006 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<!-- Dialpad in the Phone app. -->

<!--Former Dialpad uses in the tableLayout android:background="@drawable/dialpad_background"-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialpad"
    android:layout_width="match_parent"
    android:layout_height="0px"
    android:layout_weight="@integer/dialpad_layout_weight_dialpad"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="@dimen/dialpad_vertical_margin"
    android:paddingStart="5dip"
    android:paddingEnd="5dip"
    android:paddingBottom="10dip"
    android:background="#FFFFFF"
    android:layoutDirection="ltr"
    tools:showIn="@layout/fragment_dialpad">

    <TableRow
        android:layout_height="0px"
        android:layout_weight="1">
        <ng.com.nhub.paygis.dialpad.DialpadImageButton
            android:id="@+id/one" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_1_wht"
            android:contentDescription="@string/description_image_button_one" />
        <ng.com.nhub.paygis.dialpad.DialpadImageButton
            android:id="@+id/two" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_2_wht"
            android:contentDescription="@string/description_image_button_two" />
        <ng.com.nhub.paygis.dialpad.DialpadImageButton
            android:id="@+id/three" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_3_wht"
            android:contentDescription="@string/description_image_button_three" />
    </TableRow>
    <TableRow
        android:layout_height="0px"
        android:layout_weight="1">
        <ng.com.nhub.paygis.dialpad.DialpadImageButton
            android:id="@+id/four" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_4_wht"
            android:contentDescription="@string/description_image_button_four" />
        <ng.com.nhub.paygis.dialpad.DialpadImageButton
            android:id="@+id/five" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_5_wht"
            android:contentDescription="@string/description_image_button_five" />
        <ng.com.nhub.paygis.dialpad.DialpadImageButton
            android:id="@+id/six" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_6_wht"
            android:contentDescription="@string/description_image_button_six" />
    </TableRow>
    <TableRow
        android:layout_height="0px"
        android:layout_weight="1">
        <ng.com.nhub.paygis.dialpad.DialpadImageButton
            android:id="@+id/seven" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_7_wht"
            android:contentDescription="@string/description_image_button_seven" />
        <ng.com.nhub.paygis.dialpad.DialpadImageButton
            android:id="@+id/eight" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_8_wht"
            android:contentDescription="@string/description_image_button_eight" />
        <ng.com.nhub.paygis.dialpad.DialpadImageButton
            android:id="@+id/nine" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_9_wht"
            android:contentDescription="@string/description_image_button_nine" />
    </TableRow>
    <TableRow
        android:layout_height="0px"
        android:layout_weight="1">
        <ng.com.nhub.paygis.dialpad.DialpadImageButton
            android:id="@+id/star" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_star_wht"
            android:contentDescription="@string/description_image_button_star" />
        <ng.com.nhub.paygis.dialpad.DialpadImageButton
            android:id="@+id/zero" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_0_wht"
            android:contentDescription="@string/description_image_button_zero" />
        <ng.com.nhub.paygis.dialpad.DialpadImageButton
            android:id="@+id/pound" style="@style/DialtactsDialpadButtonStyle"
            android:src="@drawable/dial_num_pound_wht"
            android:contentDescription="@string/description_image_button_pound" />
    </TableRow>
</TableLayout>