<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mobile"
        android:layout_marginTop="8dp"

        android:id="@+id/tmobileNumber"
        android:layout_gravity="top"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColor="#ff757575"
        android:textSize="14sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/mobileNumber"
        android:layout_gravity="center_horizontal|top"
        android:layout_weight="1"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginRight="24dp"
        android:maxLines="1"
        android:textSize="18sp"
        android:textColor="#ff212121" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password"
        android:layout_marginTop="8dp"

        android:id="@+id/tPassword"
        android:layout_gravity="top"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColor="#ff757575"
        android:textSize="14sp"

        android:layout_below="@+id/mobileNumber"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_gravity="center_horizontal|top"
        android:layout_weight="1"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:maxLines="1"
        android:textSize="18sp"
        android:textColor="#ff212121"
        android:layout_below="@+id/tPassword"
        android:password="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/registerText"
        android:layout_marginTop="8dp"

        android:id="@+id/tRegister"
        android:layout_gravity="top"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColor="#ff4d83b3"
        android:textSize="14sp"

        android:layout_below="@+id/password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/btnLogin"
        android:background="@drawable/regbtn_states"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/tRegister"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true" />

</RelativeLayout>