<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ng.com.nhub.paygis.TraceTargetActivity"
    tools:showIn="@layout/activity_trace_target">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tlogicalAddress"
        android:layout_marginTop="4dp"

        android:id="@+id/tlogicalAddress"
        android:layout_gravity="top"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColor="#ff757575"
        android:textSize="18sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/logicalAddress"
        android:layout_gravity="center_horizontal|top"
        android:layout_weight="1"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="26dp"
        android:layout_marginRight="24dp"
        android:maxLines="1"
        android:textSize="18sp"
        android:textColor="#ff212121" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/descLogicalAddress"
        android:layout_marginTop="8dp"

        android:id="@+id/descLogicalAddress"
        android:layout_gravity="top"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:textColor="#ff4d83b3"
        android:textSize="12sp"

        android:layout_below="@+id/logicalAddress"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/traceLogical"
        android:id="@+id/btnTrace"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/descLogicalAddress"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
